@@ -231,6 +231,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Fix regression in authentication hook auto-creation on login
 * (bug 8110) Allow spaces in ISBNs
 * (bug 8024) Introduce "send me copies of emails I send to others" preference
+* Added 'EditPage::attemptSave' hook before an article is saved.
 
 == Languages updated ==
 
